# wgpu-examples

./: Cargo.toml  README.md  clippy.toml  justfile
src/support/: app.rs  camera.rs  geometry.rs  gui.rs  input.rs  lib.rs  nodegraph.rs  render.rs  scenegraph.rs  system.rs  texture.rs  transform.rs  world_render.rs
src/support/world/: animation.rs  camera.rs  gltf.rs  physics.rs  registry.rs  texture.rs  world.rs
src/support/world_render/: render.rs  texture.rs  uniform.rs
src/support/world_render/shaders/: world.wgsl
