[package]
name = "wgpu-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
bmfont = { version = "0.3.3", features = ["serde"] }
bytemuck = "1.14.0"
egui = "0.19.0"
egui-wgpu = { version = "0.19.0", features = ["winit"] }
egui-winit = "0.19.0"
env_logger = "0.9.3"
gltf = { version = "1.3.0", features = ["names", "KHR_lights_punctual", "KHR_materials_unlit"] }
image = "0.24.7"
lazy_static = "1.4.0"
log = "0.4.20"
legion = "0.4.0"
nalgebra = "0.31.4"
nalgebra-glm = { version = "0.17.0", features = ["convert-bytemuck", "serde-serialize"] }
petgraph = { version = "0.6.4", features = ["serde-1"] }
pollster = "0.2.5"
rapier3d = { version = "0.14.0", features = ["serde-serialize", "wasm-bindgen"] }
raw-window-handle = "0.4.3"
serde = "1.0.190"
wgpu = "0.13.1"
winit = "0.27.5"

[lib]
name = "support"
path = "src/support/lib.rs"
