[package]
name = "wgpu-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
bytemuck = "1.14.0"
egui = "0.19.0"
egui-wgpu = { version = "0.19.0", features = ["winit"] }
egui-winit = "0.19.0"
env_logger = "0.9.3"
image = "0.24.7"
log = "0.4.20"
nalgebra = "0.31.4"
nalgebra-glm = { version = "0.17.0", features = [
    "convert-bytemuck",
    "serde-serialize",
] }
pollster = "0.2.5"
raw-window-handle = "0.4.3"
serde = "1.0.190"
wgpu = "0.13.1"
winit = "0.27.5"

[lib]
name = "support"
path = "src/support/lib.rs"
